--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "fetch": "1.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
