--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "my-redux-saga",
   "version": "1.0.0",
+  "private": true,
+  "homepage": "https://makgalante.github.io/morning-bru",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.19.2",
     "fetch": "1.1.0",
+    "gh-pages": "^3.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.2.0",
@@ -23,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
