--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "fetch": "1.1.0",
-    "gh-pages": "^3.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.2.0",
@@ -20,6 +19,7 @@
     "redux-saga": "1.1.3"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "typescript": "3.8.3"
   },
   "scripts": {
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
